# RealTimeVisualiser2

./: Cargo.toml  config.yaml  design.md
src/: captor.rs  controller.rs  display.rs  main.rs  normaliser.rs  settings.rs  transform.rs  transformer.rs
src/transform/: merger.rs  transformer.rs
