[package]
name = "rtv2"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
config = { version = "0.15.25", default-features = false, features = ["yaml"] }
crossterm = "0.29.0"
libspa = "0.10.0"
pipewire = "0.10.0"
rustfft = "6.4.1"
serde = { version = "1.0.229", features = ["derive"] }
